--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5,7 +5,8 @@
  */
 
 * {
-    font-family: 'Muli', sans-serif;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 300;
 }
 
 .materialize-red {
@@ -2178,7 +2179,10 @@ html {
 
 body {
     margin: 0;
-    font-family: 'Muli', sans-serif;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 300;
+    background-color: lightgray;
+    font-size: 16px;
 }
 
 
@@ -2202,8 +2206,8 @@ section {
  */
 
 h1 {
-    font-family: 'Rubik';
-    font-weight: bold;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 700;
     font-size: 2em;
     margin: 0.67em 0;
 }
@@ -2705,7 +2709,8 @@ input,
 optgroup,
 select,
 textarea {
-    font-family: 'Muli', sans-serif;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 300;
 }
 
 ul:not(.browser-default) {
@@ -4429,7 +4434,6 @@ table span.badge {
 
 nav {
     color: #6a89cc;
-    background-color: #3c6382;
     width: 100%;
     height: 56px;
     line-height: 56px;
@@ -4700,12 +4704,13 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight: 400;
+    font-weight: 700;
+    letter-spacing: 2px;
     line-height: 1.2;
     text-align: center;
-    font-family: 'Rubik';
+    font-family: 'Josefin Sans', sans-serif;
     text-transform: uppercase;
-    background: linear-gradient(to right, rgb(255, 9, 54) 0%, #6b03e9 100%);
+    background: linear-gradient(to right, rgb(255, 255, 255) 0%, #0421ff 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font: {
@@ -4905,17 +4910,18 @@ small {
     padding: 24px;
     margin: 0.5rem 0 1rem 0;
     border-radius: 2px;
-    background-color: #fff;
+    background-color: rgb(175, 116, 116);
 }
 .card {
     position: relative;
     margin: 0.5rem 0 1rem 0;
-    background-color: #fff;
+    background-color: white;
     -webkit-transition: -webkit-box-shadow .25s;
     transition: -webkit-box-shadow .25s;
     transition: box-shadow .25s;
     transition: box-shadow .25s, -webkit-box-shadow .25s;
-    border-radius: 2px;
+    border-radius: 4px;
+    border: 6px solid black;
 }
 .card .card-title {
     font-size: 24px;
