--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,27 +1,28 @@
-.about {
-    height: 100vh;
-    padding: 35px 80px;
+@media screen and (max-width: 600px) {
+    .main {
+        padding: 15px 20px;
+    }
 }
 
 .resume {
     height: 100vh;
-    padding: 40px;
+    padding: 0 40px 40px, 40px;
 }
 
 .webdesign {
     height: 100vh;
-    padding: 40px;
+    padding: 0 40px;
 }
 
 .art {
     height: 100vh;
-    padding: 40px;
+    padding: 0 40px;
     margin-bottom: 25px;
 }
 
 .contact {
     height: 100vh;
-    padding: 40px;
+    padding: 0 40px;
 }
 
 
@@ -29,6 +30,43 @@
 
 .nav-wrapper li {
     color: slateblue;
+}
+
+
+/*-------ABOUT-----------*/
+
+.about {
+    height: 100vh;
+    margin-left: 60px;
+}
+
+.sidebar {
+    float: left;
+    width: 60%;
+    border: 8px solid white;
+    border-radius: 25px;
+    padding: 20px;
+    box-shadow: 0 4px 4px 0 rgba(191, 255, 0, 0.988), 0 3px 3px -2px rgba(255, 255, 255, 0.762), 0 5px 5px 0 rgba(0, 0, 0, 0.502);
+}
+
+@media screen and (max-width: 600px) {
+    .sidebar,
+    .skills {
+        padding: 15px 20px;
+    }
+}
+
+.skills {
+    float: left;
+    width: 30%;
+    margin: 0 50px;
+}
+
+
+/*-------RESUME-----------*/
+
+.resume {
+    margin: 8%;
 }
 
 
@@ -67,7 +105,25 @@
 
 .aaart {}
 
+
+/*--------CONTACT----------*/
+
 .socialmedia,
-.far .fab {
+.far,
+.fab {
     font-size: 30px;
+}
+
+.contact {
+    text-align: center;
+}
+
+.contact a {
+    padding: 10px;
+    color: #FA7268;
+}
+
+.contact a:hover {
+    padding: 10px;
+    color: orangered;
 }
