--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4699,14 +4699,10 @@ html {
 }
 
 h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h2 {
     font-weight: 700;
     letter-spacing: 2px;
-    line-height: 1.2;
+    line-height: 1.0;
     text-align: center;
     font-family: 'Josefin Sans', sans-serif;
     text-transform: uppercase;
@@ -4715,6 +4711,35 @@ h6 {
     -webkit-text-fill-color: transparent;
     font: {
         size: 2em;
+        family: $font;
+    }
+}
+
+h3,
+{
+    font-weight: Nunito;
+    letter-spacing: 2px;
+    line-height: 1.0;
+    text-align: left;
+    font-family: '', sans-serif;
+    text-transform: uppercase;
+    font: {
+        size: 1em;
+        family: $font;
+    }
+}
+
+h4,
+h5,
+h6 {
+    font-weight: Nunito;
+    letter-spacing: 2px;
+    line-height: 1.0;
+    text-align: left;
+    font-family: '', sans-serif;
+    text-transform: uppercase;
+    font: {
+        size: 1em;
         family: $font;
     }
 }
