--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -40,6 +40,13 @@
     height: 100vh;
     margin-left: 60px;
     margin-top: 80px;
+    display: flexbox;
+}
+
+.aboutwrapper {}
+
+.skillswrapper {
+    display: flexbox;
 }
 
 .sidebar {
