--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,16 +14,13 @@
     margin-top: 50px;
 }
 
-.webdesign {
-    height: 100vh;
+.contact {
     padding: 0 40px;
-    margin-top: 50px;
+    margin: 50px;
 }
 
-.contact {
-    height: 100vh;
-    padding: 0 40px;
-    margin-top: 50px;
+p {
+    margin-bottom: 25px;
 }
 
 
@@ -36,40 +33,27 @@
 
 /*-------ABOUT-----------*/
 
-.about {
-    height: 100vh;
-    margin-left: 60px;
-    margin-top: 80px;
-    display: flexbox;
+section {
+    min-height: 100vh;
+    padding: 80px 60px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.aboutwrapper {}
-
-.skillswrapper {
-    display: flexbox;
+.aboutwrapper {
+    padding-right: 60px !important;
+}
+@media screen and (max-width: 991px) {
+    .aboutwrapper {
+        padding-right: 0 !important;
+    }
 }
 
 .sidebar {
-    float: left;
-    width: 60%;
-    border: none;
     border-radius: 25px;
     padding: 20px;
     box-shadow: 0 4px 4px 0 rgba(191, 255, 0, 0.988), 0 3px 3px -2px rgba(255, 255, 255, 0.762), 0 5px 5px 0 rgba(0, 0, 0, 0.502);
     background-color: rgba(255, 255, 255, 0.447);
-}
-
-@media screen and (max-width: 600px) {
-    .sidebar,
-    .skills {
-        padding: 15px 20px;
-    }
-}
-
-.skills {
-    float: left;
-    width: 30%;
-    margin: 0 50px;
 }
 
 
@@ -84,59 +68,12 @@
 
 /*--------WORKSAMPLE CARDS----------*/
 
-.wkcard {
+.row {
+    width: 100%;
+}
+.card {
     border: 6px solid black;
 }
-
-.row {
-    float: left;
-    width: 25%;
-}
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.row,
-.row>.card {
-    padding: 8px;
-}
-
-@media screen and (max-width: 900px) {
-    .row {
-        width: 50%;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .row {
-        width: 100%;
-    }
-}
-
-
-/*--------ART----------*/
-
-.art {
-    height: 100vh;
-    padding: 0 40px;
-    text-align: center;
-    margin-bottom: 25px;
-    margin-top: 100px;
-    display: flexbox;
-}
-
-.artcard {
-    box-sizing: border-box;
-}
-
-.artrow {
-    width: 50%;
-    display: flexbox;
-}
-
 
 /*--------CONTACT----------*/
 
