--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2181,7 +2181,6 @@ body {
     margin: 0;
     font-family: 'Nunito', sans-serif;
     font-weight: 300;
-    background-color: lightgray;
     font-size: 16px;
 }
 
@@ -2194,7 +2193,10 @@ article,
 aside,
 footer,
 header,
-nav,
+nav {
+    display: block;
+}
+
 section {
     display: block;
 }
@@ -4433,7 +4435,7 @@ table span.badge {
 }
 
 nav {
-    color: #6a89cc;
+    color: #1f1f1f;
     width: 100%;
     height: 56px;
     line-height: 56px;
@@ -4508,7 +4510,7 @@ nav .brand-logo.center {
 
 @media only screen and (max-width: 992px) {
     nav .brand-logo {
-        left: 50%;
+        left: 25%;
         -webkit-transform: translateX(-50%);
         transform: translateX(-50%);
         padding: 40px;
@@ -4559,14 +4561,14 @@ nav ul li {
 }
 
 nav ul li.active {
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(255, 0, 60, 0.797);
 }
 
 nav ul a {
     -webkit-transition: background-color .3s;
     transition: background-color .3s;
     font-size: 1rem;
-    color: #fff;
+    color: rgb(76, 0, 255);
     display: block;
     padding: 0 15px;
     cursor: pointer;
@@ -4640,7 +4642,7 @@ nav .input-field label i {
 }
 
 nav .input-field label.active i {
-    color: #fff;
+    color: rgb(196, 10, 10);
 }
 
 .navbar-fixed {
