--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -30,8 +30,25 @@ p {
     color: slateblue;
 }
 
+.intro {
+    height: 100vh;
+    z-index: 5;
+}
+
 
 /*-------ABOUT-----------*/
+
+.about {
+    background-color: black;
+}
+
+.portrait {
+    text-align: center;
+}
+
+.imgportrait {
+    max-width: 200px;
+}
 
 section {
     min-height: 100vh;
@@ -43,6 +60,7 @@ section {
 .aboutwrapper {
     padding-right: 60px !important;
 }
+
 @media screen and (max-width: 991px) {
     .aboutwrapper {
         padding-right: 0 !important;
@@ -50,10 +68,7 @@ section {
 }
 
 .sidebar {
-    border-radius: 25px;
     padding: 20px;
-    box-shadow: 0 4px 4px 0 rgba(191, 255, 0, 0.988), 0 3px 3px -2px rgba(255, 255, 255, 0.762), 0 5px 5px 0 rgba(0, 0, 0, 0.502);
-    background-color: rgba(255, 255, 255, 0.447);
 }
 
 
@@ -71,9 +86,11 @@ section {
 .row {
     width: 100%;
 }
+
 .card {
     border: 6px solid black;
 }
+
 
 /*--------CONTACT----------*/
 
@@ -95,4 +112,33 @@ section {
 .contact a:hover {
     padding: 10px;
     color: orangered;
+}
+
+
+/* --------ARTWORK-------- */
+
+.workcontainer {
+    justify-content: center;
+}
+
+.dadpranks h4 {
+    padding: 40px;
+}
+
+.artworkembed {
+    max-width: 100%;
+    text-align: center;
+}
+
+.sectioncolumn {
+    flex-direction: column;
+}
+
+.sectioncolumn h2 {
+    text-align: left;
+}
+
+.sectionheader {
+    display: flex;
+    justify-content: space-between;
 }
