tried to resolve icon issue

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4514,7 +4514,7 @@ nav .brand-logo.center {
         -webkit-transform: translateX(-50%);
         transform: translateX(-50%);
         padding: 40px;
-        visibility: none;
+        x`x`
     }
     nav .brand-logo.left,
     nav .brand-logo.right {
