--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -61,13 +61,18 @@ p {
 
 /*-------ABOUT-----------*/
 
-.portrait {
-    text-align: center;
-}
 
-.imgportrait {
+  
+.maskedobject {
+    mask: url(https://svgshare.com/i/EAi.svg);
+    -webkit-mask: url(https://svgshare.com/i/EAi.svg);
+    -webkit-mask-size: cover;
+    text-align: center;
     max-width: 200px;
-}
+    display: block;
+    margin: 0 auto;
+
+  }
 
 section {
     min-height: 100vh;
