--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4568,10 +4568,11 @@ nav ul a {
     -webkit-transition: background-color .3s;
     transition: background-color .3s;
     font-size: 1rem;
-    color: rgb(76, 0, 255);
+    color: black;
     display: block;
     padding: 0 15px;
     cursor: pointer;
+    font-weight: bold;
 }
 
 nav ul a.btn,
