--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4457,10 +4457,10 @@ nav.nav-extended .nav-content {
 }
 
 nav a {
-    color: rgb(34, 0, 255);
+    color: #FA7268;
 }
 
-nav i,
+x nav i,
 nav [class^="mdi-"],
 nav [class*="mdi-"],
 nav i.material-icons {
@@ -4597,7 +4597,7 @@ nav ul a.btn-floating>.material-icons {
 }
 
 nav ul a:hover {
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(250, 114, 104, 0.8);
 }
 
 nav ul.left {
@@ -7883,7 +7883,7 @@ input[type=range]::-ms-thumb {
     height: calc(100% + 60px);
     height: -moz-calc(100%);
     padding-bottom: 60px;
-    background-color: #fff;
+    background-color: #FA7268;
     z-index: 999;
     overflow-y: auto;
     will-change: transform;
@@ -7919,14 +7919,14 @@ input[type=range]::-ms-thumb {
     color: rgba(0, 0, 0, 0.87);
     display: block;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: bold;
     height: 48px;
     line-height: 48px;
     padding: 0 32px;
 }
 
 .sidenav li>a:hover {
-    background-color: rgba(0, 0, 0, 0.05);
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .sidenav li>a.btn,
