--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -67,7 +67,6 @@ p {
     color: black !important;
     font-weight: 800;
     z-index: 10;
-    opacity: 0.5;
 }
 
 .buttontop i:hover {
@@ -81,6 +80,12 @@ p {
 
 
 /*----border-----*/
+
+.border {
+    border: 8px solid black;
+    padding: 25px;
+    box-shadow: 12px 12px 2px 1px rgba(0, 0, 0, .5);
+}
 
 
 /*-------ABOUT-----------*/
@@ -110,6 +115,10 @@ section {
 
 .rectangle {
     max-height: 60px;
+}
+
+.italp {
+    font-style: italic;
 }
 
 
