--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -42,13 +42,12 @@ p {
     background-position: 0 100%;
 }
 
-.container {}
-
 
 /*-------------------Navigation-------------------*/
 
 .nav-wrapper li {
     color: black;
+    background-color: white;
 }
 
 .intro {
@@ -85,6 +84,7 @@ p {
     border: 8px solid black;
     padding: 25px;
     box-shadow: 12px 12px 2px 1px rgba(0, 0, 0, .5);
+    background-color: white;
 }
 
 @media screen and (max-width: 600px) {
@@ -93,6 +93,14 @@ p {
         padding: 0px;
         box-shadow: none;
     }
+    .noborder {
+        background-color: none;
+    }
+}
+
+.noborder {
+    background-repeat: repeat;
+    background-image: url("/assets/notebook.png")
 }
 
 
@@ -168,6 +176,8 @@ section {
 .worksample-image {
     width: 250px;
     height: auto;
+    padding: 25px;
+    border: 8px solid black;
 }
 
 .worksample-imgcontainer {
@@ -175,8 +185,37 @@ section {
     justify-content: space-around;
 }
 
-.worksample-heading {
-    margin-top: 3rem;
+.worksample-heading,
+h3 {
+    padding-top: 2rem;
+}
+
+.worksample-heading,
+h5 {
+    padding-top: 2rem;
+}
+
+.worksample-body {
+    background-repeat: repeat;
+    background-image: url("/assets/notebook.png")
+}
+
+.webdesign {
+    background-color: rgba(223, 223, 223);
+    border-radius: 25px;
+    margin: 20px;
+}
+
+.production {
+    background-color: rgba(191, 191, 191);
+    border-radius: 25px;
+    margin: 20px;
+}
+
+.other {
+    background-color: rgba(155, 155, 155);
+    border-radius: 25px;
+    margin: 20px;
 }
 
 
