added project section and made the css not look insane

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -234,6 +234,12 @@ h5 {
     margin: 20px;
 }
 
+.mvps {
+    background-color: rgb(184, 184, 184);
+    border-radius: 25px;
+    margin: 20px;
+}
+
 .production {
     background-color: rgba(191, 191, 191);
     border-radius: 25px;
