--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -221,6 +221,7 @@ section {
     height: auto;
     padding: 25px;
     border: 8px solid black;
+    background-color: white;
 }
 
 .worksample-imgcontainer {
