--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,338 +1,352 @@
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 @media screen and (max-width: 600px) {
-    .main {
-        padding: 15px 20px;
-    }
+  .main {
+    padding: 15px 20px;
+  }
 }
 
 .div {
-    display: block;
+  display: block;
 }
 
 .resume {
-    height: 100vh;
-    padding: 0 40px;
-    margin-top: 50px;
+  height: 100vh;
+  padding: 0 40px;
+  margin-top: 50px;
 }
 
 .contact {
-    padding: 15px 40px;
-    margin: 50px;
+  padding: 15px 40px;
+  margin: 50px;
 }
 
 p {
-    margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 .nav-wrapper {
-    background-color: white;
+  background-color: white;
 }
 
 .about a {
-    color: #111;
-    padding: 0;
-    text-decoration: none;
-    background-image: linear-gradient( transparent 0%, transparent calc(50% - 8px), #FA7268 calc(50% - 8px), rgb(254, 147, 140) 100%);
-    transition: background-position 120ms ease-in-out, padding 120ms ease-in-out;
-    background-size: 100% 200%;
-    background-position: 0 0;
-    font-style: italic;
-    font-weight: bold;
-    cursor: pointer;
+  color: #111;
+  padding: 0;
+  text-decoration: none;
+  background-image: linear-gradient(
+    transparent 0%,
+    transparent calc(50% - 8px),
+    #ccff00 calc(50% - 8px),
+    #ccff00 100%
+  );
+  transition: background-position 120ms ease-in-out, padding 120ms ease-in-out;
+  background-size: 100% 200%;
+  background-position: 0 0;
+  font-style: italic;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .about a:hover {
-    padding: 2px 0 4px 0;
-    background-image: linear-gradient( transparent 0%, transparent calc(50% - 8px), rgb(254, 147, 140) calc(50% - 8px), #FA7268 100%);
-    background-position: 0 100%;
+  padding: 2px 0 4px 0;
+  background-image: linear-gradient(
+    transparent 0%,
+    transparent calc(50% - 8px),
+    #ccff00 calc(50% - 8px),
+    #ccff00 100%
+  );
+  background-position: 0 100%;
 }
 
 .headertype {
-    background-color: white;
-    padding: 30px 20px;
-    border: 8px solid black;
+  background-color: white;
+  padding: 30px 20px;
+  border: 8px solid black;
 }
 
 .headertype:hover {
-    background-color: #ccff00;
+  background-color: #ccff00;
 }
-
 
 /*-------------------Navigation-------------------*/
 
 .nav-wrapper li {
-    color: black;
-    background-color: white;
+  color: black;
+  background-color: white;
 }
 
 .intro {
-    height: 100vh;
-    z-index: 5;
+  height: 100vh;
+  z-index: 5;
 }
-
 
 /*------------BUTTON TOP-----------------*/
 
 .buttontop {
-    position: fixed;
-    font-size: 40px;
-    bottom: .1%;
-    right: 1.5%;
-    color: black !important;
-    font-weight: 800;
-    z-index: 10;
-    border-radius: 50px;
-    width: 80px;
-    height: 80px;
-    background-color: white;
-    text-align: center;
-    vertical-align: middle;
-    display: inline-block;
-    border: 8px solid black;
+  position: fixed;
+  font-size: 40px;
+  bottom: 0.1%;
+  right: 1.5%;
+  color: black !important;
+  font-weight: 800;
+  z-index: 10;
+  border-radius: 50px;
+  width: 80px;
+  height: 80px;
+  background-color: white;
+  text-align: center;
+  vertical-align: middle;
+  display: inline-block;
+  border: 8px solid black;
 }
 
 .buttontop:hover {
-    background-color: #ccff00;
+  background-color: #ccff00;
 }
 
 .buttontop i:hover {
-    color: rgb(7, 7, 7);
+  color: rgb(7, 7, 7);
 }
 
 .top {
-    font-size: .3em;
-    text-align: center;
+  font-size: 0.3em;
+  text-align: center;
 }
-
 
 /*----border-----*/
 
 .border {
-    border: 8px solid black;
-    padding: 40px 60px;
-    box-shadow: 12px 12px 2px 1px rgba(0, 0, 0, .5);
-    background-color: white;
-    margin-bottom: 40px;
+  border: 8px solid black;
+  padding: 40px 60px;
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 0, 0.5);
+  background-color: white;
+  margin-bottom: 40px;
 }
 
 @media screen and (max-width: 600px) {
-    .border {
-        border: none;
-        padding: 30px;
-        box-shadow: none;
-    }
-    .noborder {
-        background-color: none;
-    }
+  .border {
+    border: none;
+    padding: 30px;
+    box-shadow: none;
+  }
+  .noborder {
+    background-color: none;
+  }
 }
 
 .noborder {
-    background-repeat: repeat;
-    background-image: url("/assets/notebook.png");
-    padding: 40px 0;
+  background-repeat: repeat;
+  background-image: url("/assets/notebook.png");
+  padding: 40px 0;
 }
-
 
 /*-------ABOUT-----------*/
-
+/* 
 .maskedobject {
-    max-width: 200px;
-    display: block;
-    margin: 0 auto;
-    border-radius: 50%;
+  max-width: 200px;
+  display: block;
+  margin: 0 auto;
+  border-radius: 50%;
+} */
+
+/* @media (min-width: 769px) {
+  .maskedobject {
+    mask-image: url(https://svgshare.com/i/EAi.svg);
+    -webkit-mask-image: url(https://svgshare.com/i/EAi.svg);
+    mask-image-size: cover;
+    -webkit-mask-size: cover;
+  }
+} */
+
+.portrait {
+  position: relative;
+  text-align: center;
+  display: block;
 }
 
-@media (min-width: 769px) {
-    .maskedobject {
-        mask-image: url(https://svgshare.com/i/EAi.svg);
-        -webkit-mask-image: url(https://svgshare.com/i/EAi.svg);
-        mask-image-size: cover;
-        -webkit-mask-size: cover;
-    }
+.kate {
+  box-shadow: 10px 10px 8px 10px rgba(0, 0, 0, 0.2);
+  width: 25%;
+  height: auto;
 }
 
 section {
-    min-height: 100vh;
-    padding: 40px 60px;
+  min-height: 100vh;
+  padding: 40px 60px;
 }
-
 
 /*-------SKILLS-----------*/
 
 .logo {
-    max-height: 50px;
-    margin-top: 25px;
+  max-height: 50px;
+  margin-top: 25px;
 }
 
 .rectangle {
-    max-height: 60px;
+  max-height: 60px;
 }
 
 .italp {
-    font-style: italic;
+  font-style: italic;
 }
-
 
 /*--------WORKSAMPLE CARDS----------*/
 
 .row {
-    width: 100%;
+  width: 100%;
 }
 
 .card {
-    border: 6px solid black;
+  border: 6px solid black;
 }
 
 .boldtype {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .linkbutton {
-    border: 8px solid black;
-    padding: 25px;
-    font-weight: bold;
-    font-size: 1.2em;
-    text-align: center;
-    margin: 10px;
-    background-color: #FA7268;
+  border: 8px solid black;
+  padding: 25px;
+  font-weight: bold;
+  font-size: 1.2em;
+  text-align: center;
+  margin: 10px;
+  background-color: #1a4941;
 }
 
 .linkbutton:hover {
-    cursor: pointer;
-    background-color: black;
-    color: white;
+  cursor: pointer;
+  background-color: black;
+  color: white;
 }
 
 .buttonlink-worksamples {
-    color: black;
-    margin-bottom: 5rem;
+  color: black;
+  margin-bottom: 5rem;
 }
 
 .worksample-image {
-    width: 250px;
-    height: auto;
-    padding: 25px;
-    border: 8px solid black;
-    background-color: white;
+  width: 250px;
+  height: auto;
+  padding: 25px;
+  border: 8px solid black;
+  background-color: white;
 }
 
 .worksample-imgcontainer {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 .worksample-heading,
 h3 {
-    padding-top: 2rem;
+  padding-top: 2rem;
 }
 
 .worksample-heading,
 h5 {
-    padding-top: 2rem;
+  padding-top: 2rem;
 }
 
 .worksample-body {
-    background-repeat: repeat;
-    background-image: url("/assets/notebook.png")
+  background-repeat: repeat;
+  background-image: url("/assets/notebook.png");
 }
 
 .wkcard {
-    border-radius: 25px;
-    margin: 3% 8% 3% 8%;
-    box-shadow: 12px 12px 2px 1px rgba(0, 0, 0, .5);
-    border: 8px solid black;
-    background-repeat: repeat;
-    background-image: url("/assets/lined-paper-2.png");
+  border-radius: 25px;
+  margin: 3% 8% 3% 8%;
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 0, 0.5);
+  border: 8px solid black;
+  background-repeat: repeat;
+  background-image: url("/assets/lined-paper-2.png");
 }
 
 .webdesign {
-    background-color: rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255);
 }
 
 .mvps {
-    background-color: rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255);
 }
 
 .production {
-    background-color: rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255);
 }
 
 .other {
-    background-color: rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255);
 }
 
 .disclaimer h4 {
-    text-align: center;
+  text-align: center;
 }
 
 @media screen and (max-width: 600px) {
-    .disclaimer {
-        border: none;
-        padding: 0px;
-        box-shadow: none;
-        text-align: center;
-    }
-    .disclaimer h1 {
-        font-size: 1em;
-        padding: 10px;
-    }
+  .disclaimer {
+    border: none;
+    padding: 0px;
+    box-shadow: none;
+    text-align: center;
+  }
+  .disclaimer h1 {
+    font-size: 1em;
+    padding: 10px;
+  }
 }
 
 .par-button {
-    text-align: center;
+  text-align: center;
 }
-
 
 /*--------CONTACT----------*/
 
 .socialmedia,
 .far,
 .fab {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 .contact {
-    text-align: center;
+  text-align: center;
 }
 
 .contact a {
-    padding: 10px;
-    color: #FA7268;
+  padding: 10px;
+  color: #1a4941;
 }
 
 .contact a:hover {
-    padding: 10px;
-    color: #ccff00;
+  padding: 10px;
+  color: #ccff00;
 }
-
 
 /* --------ARTWORK-------- */
 
 .workcontainer {
-    justify-content: center;
+  justify-content: center;
 }
 
 .dadpranks h4 {
-    padding: 40px;
+  padding: 40px;
 }
 
 .artworkembed {
-    max-width: 100%;
-    text-align: center;
+  max-width: 100%;
+  text-align: center;
 }
 
 .sectioncolumn {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .sectioncolumn h2 {
-    text-align: left;
+  text-align: left;
 }
 
 .sectionheader {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
