--- a/logos/index_files/materialize.css
+++ b/logos/index_files/materialize.css
@@ -4457,7 +4457,7 @@ nav.nav-extended .nav-content {
 }
 
 nav a {
-    color: rgb(34, 0, 255);
+    color: rgb(26, 73, 65);
 }
 
 nav i,
@@ -4501,7 +4501,7 @@ nav .brand-logo {
     font-size: 2.1rem;
     padding-left: 25px;
 }
-
+ 
 nav .brand-logo.center {
     left: 50%;
     -webkit-transform: translateX(-50%);
@@ -4561,14 +4561,14 @@ nav ul li {
 }
 
 nav ul li.active {
-    background-color: rgba(255, 0, 60, 0.797);
+    background-color: #1a4941;
 }
 
 nav ul a {
     -webkit-transition: background-color .3s;
     transition: background-color .3s;
     font-size: 1rem;
-    color: rgb(76, 0, 255);
+    color: #1a4941;
     display: block;
     padding: 0 15px;
     cursor: pointer;
